--- a/Skilled elearning landing page/index.html
+++ b/Skilled elearning landing page/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="Skilled elearning landing page/assets/favicon-32x32.png">
+    <link rel="stylesheet" href="/Skilled elearning landing page/style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav>
-            <img src="/assets/logo-dark.svg" alt="logo" class="startLogo">
+            <img src="/Skilled elearning landing page/assets/logo-dark.svg" alt="logo" class="startLogo">
             <button title="start" type="button" class="startNav button">Get Started</button>
         </nav>
 
@@ -25,7 +25,7 @@
             <p>Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
             <button title="start" type="button" class="intro button">get started</button>
             </div>
-            <img src="/assets/image-hero-desktop.png" alt="decorative image">
+            <img src="/Skilled elearning landing page/assets/image-hero-desktop.png" alt="decorative image">
         </section>
 
         <section id="gridSec">
@@ -34,35 +34,35 @@
             </article>
 
             <article>
-                <img src="/assets/icon-animation.svg" alt="animation icon">
+                <img src="/Skilled elearning landing page/assets/icon-animation.svg" alt="animation icon">
                 <h4>Animation</h4>
                 <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
                 <span><a href=".">Get Started</a></span>
             </article>
 
             <article>
-                <img src="/assets/icon-design.svg" alt="design icon">
+                <img src="/Skilled elearning landing page/assets/icon-design.svg" alt="design icon">
                 <h4>Design</h4>
                 <p>Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
                 <span><a href=".">Get Started</a></span>
             </article>
 
             <article>
-                <img src="/assets/icon-photography.svg" alt="photography icon">
+                <img src="/Skilled elearning landing page/assets/icon-photography.svg" alt="photography icon">
                 <h4>Photography</h4>
                 <p>Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
                 <span><a href=".">Get Started</a></span>
             </article>
 
             <article>
-                <img src="/assets/icon-crypto.svg" alt="crypto icon">
+                <img src="/Skilled elearning landing page/assets/icon-crypto.svg" alt="crypto icon">
                 <h4>Crypto</h4>
                 <p>All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
                 <span><a href=".">Get Started</a></span>
             </article>
 
             <article>
-                <img src="/assets/icon-business.svg" alt="business icon">
+                <img src="/Skilled elearning landing page/assets/icon-business.svg" alt="business icon">
                 <h4>Business</h4>
                 <p>A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
                 <span><a href=".">Get Started</a></span>
@@ -72,7 +72,7 @@
     </body>
 
     <footer>
-        <img src="/assets/logo-light.svg" alt="logo" class="startLogo">
+        <img src="/Skilled elearning landing page/assets/logo-light.svg" alt="logo" class="startLogo">
         <button title="start" type="button" class=" end button">Get Started</button>
     </footer>
 </body>
