--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section>
         <ul>
             <li><a href="/Skilled elearning landing page/index.html">Skilled e-learning landing page</a></li>
-            <li></li>
+            <li><a href="/news homepage/index.html">Skilled e-learning landing page</a></li>
         </ul>
     </section>
 
