news homepage complete

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <section>
         <ul>
-            <li><a href="/Skilled elearning landing page/index.html">Skilled e-learning landing page</a></li>
-            <li><a href="/news homepage/index.html">Skilled e-learning landing page</a></li>
+            <li><a href="/Skilled elearning landing page/index.html">Skilled e-learning landing page</a> <img src="/Skilled elearning landing page/assets/elearning landing page preview.png" alt="Skilled elearning page preview"></li>
+            <li><a href="/news homepage/index.html">News Homepage</a> <img src="/news homepage/assets/images/news-homepage-preview.png" alt="news homepage"> </li>
         </ul>
     </section>
 
