--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Frontend Challenges</title>
 </head>
 <body>
@@ -10,12 +11,21 @@
         <h1>Frontend - Challenges</h1>
     </header>
 
-    <section>
-        <ul>
-            <li><a href="/Skilled elearning landing page/index.html">Skilled e-learning landing page</a> <img src="/Skilled elearning landing page/assets/elearning landing page preview.png" alt="Skilled elearning page preview"></li>
-            <li><a href="/news homepage/index.html">News Homepage</a> <img src="/news homepage/assets/images/news-homepage-preview.png" alt="news homepage"> </li>
-        </ul>
-    </section>
+    <main>
+        <section class="selp title">
+            <a href="/Skilled elearning landing page/index.html">Skilled e-learning landing page</a>
+            <!--<div>
+                <img src="/Skilled elearning landing page/assets/elearning landing page preview.png" alt="Skilled elearning page preview">
+            </div>-->
+        </section>
+
+        <section class="nh title">
+            <a href="/news homepage/index.html">News Homepage</a> 
+            <!--<div>
+                <img src="/news homepage/assets/images/news-homepage-preview.png" alt="news homepage">
+            </div>-->
+        </section>
+    </main>
 
     <footer>
         <span>This page is under development</span>
