--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
     <main>
         <section class="selp title">
             <a href="/Skilled elearning landing page/index.html">Skilled e-learning landing page</a>
-            <!--<div>
-                <img src="/Skilled elearning landing page/assets/elearning landing page preview.png" alt="Skilled elearning page preview">
-            </div>-->
         </section>
 
         <section class="nh title">
             <a href="/news homepage/index.html">News Homepage</a> 
-            <!--<div>
-                <img src="/news homepage/assets/images/news-homepage-preview.png" alt="news homepage">
-            </div>-->
+        </section>
+
+        <section class="nh title">
+            <a href="/cric cards/index.html">Cric Cards Page</a> 
         </section>
     </main>
 
